--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 * {
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
+    /* border: 1px solid red; */
 }
 
 a{
@@ -8,23 +10,129 @@ a{
 }
 
 .container{
-    background: #040836;
+    background: #5b7ff7;
     width: 100vw;
     height: 100vh;
 }
 
 header {
-    background: #fcfcfc;
+    background: #040027;
     display: flex;
     justify-content: space-between;
     padding: 10px;
+    position: sticky;
+    top: 0;
 }
 
 nav ul {
     display: flex;
+    justify-content: space-between;
 }
 
 nav ul li {
-    padding: 5px;
+    width: 70px;
+    margin: 5px;
     list-style: none;
+}
+
+nav ul li a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    background: #0f028a;
+    color: #fcfcfc;
+    border-radius: 5px;
+}
+
+nav ul li a:hover {
+    background: #f88e02;
+    color: #212121;
+}
+
+main section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    flex-wrap: wrap;
+    margin-top: 40px;
+}
+
+#auhtors {
+    display: flex;
+    flex-direction: column;
+}
+
+#home {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    padding-left: calc(20%);
+    width: 100vw;
+    height: 90vh;
+    font-size: 52px;
+    text-align: left;
+}
+
+#btn-play{
+    margin-top: 40px;
+    padding: 20px;
+    color: #040027;
+    background: #f88e02;
+    font-size: 28px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+}
+
+#btn-play:hover {
+    background: #02c202;
+    color: #fcfcfc;
+}
+
+#authors > p{
+    margin-top: 70px;
+    font-size: 32px;
+}
+
+#authors-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    margin-top: 40px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: #040027;
+    border-radius: 10px;
+    color: #fcfcfc;
+    width: 200px;
+    height: 300px;
+    margin: 40px;
+    padding: 15px;
+}
+
+.card p{
+    background: #f88e02;
+    width: calc(100% - 60px);
+    text-align: center;
+    color: #212121;
+    margin-bottom: 20px;
+    padding: 10px;
+    border-radius: 4px;
+}
+
+.card img {
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
+    border: 1px solid #fcfcfc;
 }
